--- a/component/Main/index.less
+++ b/component/Main/index.less
@@ -9,7 +9,11 @@
     padding-bottom: 20px;
     // display: flex;
   }
-
+  @media screen and (max-width: 1000px){
+    div.layout-container-right {
+      display: none;
+    }
+  }
   .layout-container-right {
     width: 380px;
     min-width: 380px;
