--- a/component/Main/index.less
+++ b/component/Main/index.less
@@ -7,7 +7,8 @@
   .layout-container-left {
     width: 100%;
     padding-bottom: 20px;
-    // display: flex;
+    display: flex;
+    flex-direction: column;
   }
   @media screen and (max-width: 1000px){
     div.layout-container-right {
