--- a/component/Main/index.less
+++ b/component/Main/index.less
@@ -20,7 +20,7 @@
     padding: 10px;
 
     h4.layout-container-right-title {
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid #ddd;
       padding: 8px 0;
       font-size: 13px;
       color: #09b597;
